--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "No more maintaining this extension; as of 2019. So please use at your own risk.",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --config config/webpack.dev.js",
     "prepare": "mkdir -p frow && cp node_modules/frow/dist/* frow/",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:server": "npm run build && node server.js",
-    "start": "nodemon --ext css,html,js,json -i manifest.bundle.js -i scripts.bundle.js --exec npm run start:server"
+    "build:dev": "webpack --config config/webpack.dev.js",
+    "start": "webpack-dev-server --config config/webpack.dev.js",
+    "watch": "nodemon --ext css,html,js,json -i manifest.bundle.js -i scripts.bundle.js --exec npm run build:dev"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "nodemon": "^1.18.10",
     "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
