--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/codysherman/2NFM#readme",
   "devDependencies": {
     "nodemon": "^1.18.10",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.5"
